<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View.OnClickListener" />

        <variable
            name="info"
            type="com.phucduong.weather.data.Weather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@{String.format(@string/date, info.datetime)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/average_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/ave_temp, info.averageTemp)}"
            app:layout_constraintEnd_toEndOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/date"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/pressure, info.pressure)}"
            app:layout_constraintEnd_toEndOf="@id/average_temp"
            app:layout_constraintStart_toStartOf="@id/average_temp"
            app:layout_constraintTop_toBottomOf="@id/average_temp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/humidity, info.humidity)}"
            app:layout_constraintEnd_toEndOf="@id/pressure"
            app:layout_constraintStart_toStartOf="@id/pressure"
            app:layout_constraintTop_toBottomOf="@id/pressure" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.format(@string/description, info.description)}"
            app:layout_constraintEnd_toEndOf="@id/humidity"
            app:layout_constraintStart_toStartOf="@id/humidity"
            app:layout_constraintTop_toBottomOf="@id/humidity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
